--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			<div class="row">
 				<div class="w3-container">
 					<div class="col-md-6">
-						<p>Powered by &copy; <a href="#" title="Rawda Store" class="w3-hover-text-green">Mini Market</a></p>
+						<p>Powered by &copy; <a href="#" title="Mini Market" class="w3-hover-text-green">Mini Market</a></p>
 					</div>
 					
 					<div class="col-md-6">
