--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 				<div class="navbar-header">
 				  <a href="index.html" class="w3-bar-item w3-button navbar-brand"><b>Mini</b> Market</a>
 				</div>
-				<div class="collapse navbar-collapse" id="myNavbar">
-					<ul class="nav navbar-nav navbar-right">
+				<div class="collapse">
+					<ul class="nav">
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="contact.html">Contact Us</a></li>
@@ -28,13 +28,9 @@
 		</nav>
 		
 		
-		<div class="row" style="margin-top:65px;">
+		<div class="row">
 			<div id="myCarousel" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-					<li data-target="#myCarousel" data-slide-to="1"></li>
-					<li data-target="#myCarousel" data-slide-to="2"></li>
-				</ol>
+				
 				<div class="carousel-inner">
 					<div class="item active">
 						<img src="images/41.jpg" alt="Los Angeles" style="width:100%;">
@@ -70,7 +66,7 @@
 
 
 		<!-- About Section -->
-		<div class="w3-container w3-padding-32" id="about">
+		<div class="w3-container w3-padding-32">
 			<h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
 				occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
